--- a/questions/db2_3.yaml
+++ b/questions/db2_3.yaml
@@ -2,12 +2,16 @@
 type: template
 template: db2
 statement:
-  nl: |-
-    Geef de namen van alle verkopers jonger dan 30 jaar.
-  en: |-
-    Return the names of all salesman younger than 30.
+  content:
+    nl: |-
+      Geef de namen van alle verkopers jonger dan 30 jaar.
+    en: |-
+      Return the names of all salesman younger than 30.
+  placeholders: {}
 answer:
-  nl: |-
-    "SELECT naam from Verkoper where leeftijd < 30;"
-  en: |-
-    "SELECT name from Salesman where age < 30;"
+  content:
+    nl: |-
+      "SELECT naam from Verkoper where leeftijd < 30;"
+    en: |-
+      "SELECT name from Salesman where age < 30;"
+  placeholders: {}
