--- a/question_templates/db2.yaml
+++ b/question_templates/db2.yaml
@@ -53,12 +53,12 @@ variables:
 
       INSERT INTO "{Salesman}" VALUES("Abels", 63, 120000);
       INSERT INTO "{Salesman}" VALUES("Bakker", 38, 42000);
-      INSERT INTO "{Salesman}" VALUES("Jansen", 26, 36000);
+      INSERT INTO "{Salesman}" VALUES("{SalesmanName1}", 26, 36000);
       INSERT INTO "{Salesman}" VALUES("Murphy", 42, 50000);
       INSERT INTO "{Salesman}" VALUES("Zwiers", 59, 118000);
       INSERT INTO "{Salesman}" VALUES("Kroese", 27, 34000);
-      INSERT INTO "{Salesman}" VALUES("Abels2", 63, 120000);
-      INSERT INTO "{Salesman}" VALUES("Abels3", 63, 121000);
+      INSERT INTO "{Salesman}" VALUES("Jack", 63, 120000);
+      INSERT INTO "{Salesman}" VALUES("Bram", 63, 121000);
 
       INSERT INTO "{Customer}" VALUES("{CustomerName1}", "Leiderdam", "B");
       INSERT INTO "{Customer}" VALUES("Maasbrachtse Houthandel", "Maasbracht", "F");
@@ -66,13 +66,13 @@ variables:
       INSERT INTO "{Customer}" VALUES("ABC-Stadsontwikkeling", "{City1}", "B");
 
       INSERT INTO "{Order}" VALUES("{CustomerName1}", "Zwiers", 100, 560);
-      INSERT INTO "{Order}" VALUES("{CustomerName1}", "Jansen", 200, 1800);
+      INSERT INTO "{Order}" VALUES("{CustomerName1}", "{SalesmanName1}", 200, 1800);
       INSERT INTO "{Order}" VALUES("Maasbrachtse Houthandel", "Abels", 300, 480);
       INSERT INTO "{Order}" VALUES("Verenigde Bouwbedrijven", "Abels", 400, 2500);
       INSERT INTO "{Order}" VALUES("{CustomerName1}", "Murphy", 500, 6000);
       INSERT INTO "{Order}" VALUES("ABC-Stadsontwikkeling", "Abels", 600, 700);
-      INSERT INTO "{Order}" VALUES("Maasbrachtse Houthandel", "Jansen", 700, 150);
-      INSERT INTO "{Order}" VALUES("{CustomerName1}", "Jansen", 800, 100);
+      INSERT INTO "{Order}" VALUES("Maasbrachtse Houthandel", "{SalesmanName1}", 700, 150);
+      INSERT INTO "{Order}" VALUES("{CustomerName1}", "{SalesmanName1}", 800, 100);
       '
     placeholders: &types
       Salesman:
@@ -130,6 +130,11 @@ variables:
           nl: Rotterdam
           en: London
         placeholders: {}
+      SalesmanName1:
+        content:
+          nl: Jansen
+          en: Johnson
+        placeholders: {}
       NewCustomerName:
         content:
           nl: Pieter's bouwbedrijf
@@ -139,6 +144,11 @@ variables:
         content:
           nl: Amsterdam
           en: Newcastle
+        placeholders: {}
+      NewSalesmanName:
+        content:
+          nl: Jef
+          en: John
         placeholders: {}
   correct:
     content: template:answer
