--- a/questions/db1_5.yaml
+++ b/questions/db1_5.yaml
@@ -1,7 +1,7 @@
 ---
 type: template
 template: db1
-statement_nl: Geef van alle onderdelen het id en het gewicht in gram (in een kolom genaamd {Weight_in_Grams}).
-statement_en: Return the id and the weight in grams (in a column named {Weight_in_Grams}) for all parts.
+statement_nl: Geef van alle onderdelen het id en het gewicht in gram (in een kolom genaamd {Weight_in_Grams}). Het gewicht in de databank is gegeven in pond en een pond komt overeen met 454 gram.
+statement_en: Return the id and the weight in grams (in a column named {Weight_in_Grams}) for all parts. The weight in the database is given in pounds and a pound equals 454 grams.
 answer: |-
   'SELECT id, {weight} * 454 as {Weight_in_Grams} FROM {Part};'
