--- a/questions/db2.yaml
+++ b/questions/db2.yaml
@@ -191,6 +191,7 @@ extensions:
   stats: false
   written_number: false
   sqlite: true
+  text: false
 diagnostic_topic_names: []
 resources: []
 custom_part_types: []
@@ -199,3 +200,4 @@ builtin_constants:
   pi: true
   i: true
 custom_constants: []
+rulesets: {}
